fix minor layout issues

--- a/web-ui/src/components/data/DataData.css
+++ b/web-ui/src/components/data/DataData.css
@@ -1,12 +1,13 @@
 sf-data-data {
-  flex: 0 0 100%;
+  padding: 0.25em;
+  flex: 0 0 calc(100% - 0.5em);
   background-color: #fff;
 }
 
 sf-data-data textarea {
-  margin: 0.25em;
-  width: calc(100% - 0.5em);
-  height: calc(100% - 0.5em);
+  width: 100%;
+  height: 100%;
+  padding: 0.25em;
   box-sizing: border-box;
   resize: none;
 }
