--- a/web-ui/src/components/data/DataTable.css
+++ b/web-ui/src/components/data/DataTable.css
@@ -1,10 +1,7 @@
 sf-data-table {
-  flex: 0 0 100%;
+  padding: 0.25em;
+  flex: 0 0 calc(100% - 0.5em);
   background-color: #fff;
-}
-
-sf-data-table > table {
-  margin: 0.25em;
 }
 
 sf-data-table > table,
